--- a/webapp/WEB-INF/classes/trans_fa.properties
+++ b/webapp/WEB-INF/classes/trans_fa.properties
@@ -1,10 +1,10 @@
-#Mon Sep 22 09:24:20 MST 2008
-1397839042=
+#Mon Sep 22 16:37:43 MST 2008
+1397839042=What is power search?
 1121727836=\u062A\u0631\u062C\u0648\u0645\u0647\u0627 \u06A9\u062A\u0627\u0628 \u0645\u0642\u062F\u0633
 80048383=OTHER BIBLE TOOLS
 -26833613=Unbound Bible,
 84883943=UPLOAD TEXTS
--1860636657=
+-1860636657=Of course we&rsquo;re kidding. No, verses are not missing. However, some verses appear as footnotes in certain translations, because they weren&rsquo;t present in the earliest or most reliable manuscripts. To view these verses, you need to view the entire chapter or any span of verses that includes the verse directly preceding the apparent "missing" verse.
 -409898071=Hide Headings in Bibles
 1146753407=\u0646\u062A\u06CC\u062C\u0647 \u0647\u0627\:
 825576054=\u0628\u062F\u0627\u0646 \u0698\u0627\u0648\u0627\u0633\u06A9\u0631\u06CC\u067E\u062A
@@ -13,58 +13,58 @@
 -2132933458=Ignore Case (UPPER/lower isn't strictly matched)
 -1638610202=ABOUT THE BIBLE TOOL
 -1807907639=\u0633\u0628\u06A9\:
--2120284785=
+-2120284785=What can I do with preferences?
 -440858376=\u0627\u0631\u062C\u0627\u0639\u062A\u0647\u0627
 -1621785194=\u067E\u06CC\u0648\u0646\u062F\u0647\u0627
-351120534=
--1279940531=
+351120534=References to other appearances of the word in the Bible
+-1279940531=Using Strong's Numbers, you can easily find other appearances of a word, or the location of a phrase if you know parts of the phrase but not its exact location in the Bible.
 961731111=\u06A9\u062A\u0627\u0628\u0647\u0627 \u062A\u0641\u0635\u06CC\u0631\u06CC
 1947754291=we provide power searching capabilities and cutting edge tools to help you engage the Bible at a deeper level. 
-1063422380=
+1063422380=A number of things. You can select preferred Bible translations and other texts, so that your search or study only references your preferred selections. You can also add / remove tabs at the top, depending on texts or functionality that you like or perhaps don&rsquo;t use. You can also choose the tool&rsquo;s skin. Our goal is to give you as many preferences as possible, and we&rsquo;ll be adding more in the coming months.
 137584316=Be sure to check out these other sites for free Bible resources\:  
 1236046375=\ \u062A\u0639\u0644\u06CC\u0645 \u062A\u0631\u0686\u0648\u0645\u0647\u200C\u0647\u0627 \u0645\u0648\u0627\u0632\u06CC
--1955964497=
--433513342=
+-1955964497=What can I do with Preferences?
+-433513342=\u0686\u0633\u062A\u0686\u0648 \u067E\u06CC\u0634\u0631\u0641\u062A\u0647 \u0686\u06CC\u0633\u062A\u061F
 -488807382=\u0646\u0645\u0627\u06CC\u0634 \u0645\u0648\u0627\u0632\u06CC
--872325569=
+-872325569=Morphology is the information about the language parsing of a word, such as the tense, voice or mood. You can click on the morph codes following the words to view the parsing of that word
 177903544=An <acronym title\="Open Scripture Information Standard">OSIS</acronym> editing tool plug-in for Microsoft Word 2003 is under construction. The tool will be completed in the spring, 2004, and will let you encode texts in <acronym title\="Open Scripture Information Standard">OSIS</acronym>  for use in the tools available on this site.
 2085139382=
 1113579794=\u0633\u0628\u06A9 \u06D5\u0646\u062A\u062E\u0627\u0628 \u0634\u062F\u0647
 92048783=\u0642\u0633\u0645\u062A\u0647\u0627\u06CC \u06A9\u062A\u0627\u0628 \u0645\u0642\u062F\u0633 \u06A9\u0647 \u0645\u06CC\u062E\u0648\u0627\u0647\u06CC\u062F \u062C\u0633\u062A\u062C\u0648 \u06A9\u0646\u06CC\u062F
 -742621714=Bible Research Center
 -1900473501=Crosswalk,
-15980382=
--1278213999=
+15980382=You can get CrossWire SWORD software, on which this tool was built, by getting in touch with 
+-1278213999=OSIS is a key technical piece that will allow this to happen. Other key pieces include partnerships between organizations like SBL and ABS (to insure large distribution channels), and good content, such as making modern translations and helpful related materials available. That will be a big focus in the coming months.
 1640065951=\u0627\u0637\u0644\u0627\u0639\u0627\u062A \u0644\u063A\u062A \u0634\u0646\u0627\u0633\u06CC 
 -637237544=\u0627\u0646\u062A\u062E\u0627\u0628\u0647\u0627
 -1946624683=Interactive Maps
 234742413=Hide FAQ Tab
 -451549348=
-116358771=
+116358771=Yes. This tool was built using open source code, so feel free to use it however you like.
 920334141=\u06A9\u062A\u0627\u0628\u0647\u0627 \u062A\u0641\u0633\u06CC\u0631\u06CC \u062F\u0631 \u06A9\u0644
 -253594524=\u06A9\u0644\u0645 \u06CC\u0627 \u0627\u0645\u0637\u0644\u0627\u062D 
 -1205385002=\u06A9\u0644\u0627\u0645 \u062C\u0633\u062A\u062C\u0648\:
--1903471366=
--85337195=
--793947317=
+-1903471366=What are Strong&rsquo;s Numbers?
+-85337195=What is parallel study?
+-793947317=Is the Bible Tool available on CD?
 -537727964=\u0628\u0627\u0628 \u0642\u0628\u0644\u06CC
 -1204791352=\u0634\u06A9\u0644 \u062C\u0633\u062A\u062C\u0648
 1486635489=CrossWire Bible Society
 1733545526=Hide Power Search Tab
+386941971=Once the text you&rsquo;re looking to study appears on the screen, you have several options. You can navigate within the text by selecting previous chapter or next chapter. Keep in mind that when you&rsquo;re at the beginning of a book of the Bible, previous chapter will take you to last chapter of the previous book. The same holds true when you select next chapter on the last chapter of a book of the Bible.
 1911936993=\u0646\u0648\u0631 \u0631\u0648\u0632\u0627\u0646\u06CC \u0628\u0631\u0627\u06CC \u0627\u0645\u0631\u0648\u0632
-386941971=
 -604339487=
--717182931=
+-717182931=However, it&rsquo;s easier to just download the software from the website.
 879866124=Show Devotionals Tab
 1132835690=Society of Biblical Literature
 -1197467108=American Bible Society
 2255103=\u062E\u0627\u0646\u0647
-1689727392=
+1689727392=Passage study allows you to search by keyword (for example, Pharaoh), phrase (such as Ark of the Covenant), verse (like Genesis 1\:1) or passage (John 3).
 155959361=\u200C\u06A9\u0644 \u062A\u0631\u062C\u0645\u0647 \u0647\u0627
-538518468=
+538518468=The Open Scriptural Information Standard (OSIS) is an XML schema for encoding Bibles and related text. Once in OSIS, you can do lots of cool things, like publish the info as a printed book, or PDF, or HTML, or WML for viewing on a cell phone, etc. You can learn more by visiting the 
 -1033866599=\u0634\u0645\u0627\u0631\u0647 \u0647\u0627\u06CC \u0627\u0633\u062A\u0631\u0648\u0646\u06AF
-82664747=
--1998487659=
+82664747=Visit
+-1998487659=\u062A\u06CE\u0644\u062D\u0645 \u062A\u0631\u0686\u0648\u0645\u0647\u200C\u0647\u0627 
 910591475=\u062A\u0639\u0644\u06CC\u0645 \u06A9\u062A\u0627\u0628 \u0645\u0642\u062F\u0633
 28711354=\u0646\u0648\u0631 \u0631\u0648\u0632\u0627\u0646\u06CC
 1778673885=\u0628\u06CC\u0634\u062A\u0631...
@@ -72,42 +72,42 @@
 1258901926=\u06A9\u0644 \u0628\u0628\u06CC\u0646
 -294197045=\u0627\u06CC\u0646 \u0628\u0627\u0628
 -1498414611=Show Library Tab
-463096583=
-96727=
+463096583=What makes the Bible Tool different from other Bible search tools?
+96727=and
 -2116099482=\u06A9\u0644 \u062A\u0641\u0633\u06CC\u0631\u0647\u0627
 313721366=Click to remove.  Reselect on the side to move to the top.
 649821751=\ \u062A\u0639\u0644\u06CC\u0645 \u0642\u0633\u0645\u062A \u06A9\u062A\u0627\u0628 \u0645\u0642\u062F\u0633
-1850809233=
-1147145891=
+1850809233=Word study allows you to focus more on the meaning of a particular word within the text. One way to do that is by using Strong&rsquo;s Numbers and reviewing the Morphology of the word.
+1147145891=\u0633\u0627\u0639\u0644\u0647\u0627 \u06A9\u062A\u0627\u0628 \u0645\u0642\u062F\u0633
 230718181=The SWORD Project,
--640431634=
+-640431634=What does &ldquo;Printer Friendly&rdquo; mean?
 -195667765=\u062F\u0627\u0646\u0644\u0648\u062F
-771580917=
-1594652557=
--1762719186=
--1439463711=
--1121905749=
-1371173378=
+771580917=Can I download Bible Tool Bibles and other content?
+1594652557=Power search allows you to expand on the basic passage search functionality. This includes searching by sentence fragments, or exact phrase. You can also use whatever syntax you like in limiting your search range to specific sections, such as in Revelations chapters 1-5.
+-1762719186=What does &ldquo;printer friendly&rdquo; mean?
+-1439463711=The software is a combined project of the 
+-1121905749=The Bible Tool is part of a larger initiative co-sponsored by ABS and the SBL to allow people to approach the Bible on their terms, in the culture, community, context, media and format of their choice. This tool will evolve in the coming months / years to help us reach that goal.
+1371173378=What is &ldquo;Show Morphology&rdquo;?
 968804337=\u0686\u0633\u062A\u0686\u0648 \u067E\u06CC\u0634\u0631\u0641\u062A\u0647
-1523222879=
--1995153715=
+1523222879=The definition of the original word
+-1995153715=How can I get a printed edition of the Bible?
 96917886=Are you the sort of person who creates a Klingon translation of the Bible? Would it cross your mind to build a Hyper-Concordance for the New Testament in your spare time? People are using an XML standard called <acronym title\="Open Scripture Information Standard">OSIS</acronym> to do a number of interesting things.
--1506232183=
+-1506232183=OSIS website
 1486220906=
 81929124=(most syntax works, e.g.  mat-jn;rom;rev 1-5)
--1660970327=
+-1660970327=The technology was developed by 
 1830861979=\u06A9\u062A\u0627\u0628 \u062E\u0627\u0646\u0647
 1983726947=\u062C\u0633\u062A\u062C\u0648\u06CC \u067E\u06CC\u0634\u0631\u0641\u062A\u0647
 285275739=\u0627\u0631\u062C\u0627\u0639\u062A \u06A9\u062A\u0627\u0628 \u0645\u0642\u062F\u0633
 -899705719=\u06A9\u062A\u0627\u0628 \u062E\u0627\u0646\u0647
--420471141=
--705894424=
-1645341956=
-1370288619=
-2026750205=
+-420471141=The pronunciation of the original word
+-705894424=This means we will strive to enable you, the user, to have the look / feel you want, the functionality you want, the texts you want (by adding popular ones and allowing you to upload your own) in the format you want (initially electronic or print). Because the tool is open source, if you have some technical skills you are free to download the tool and make changes as you see fit.
+1645341956=BIBLE VERSIONS AND TRANSLATIONS
+1370288619=GETTING FREE BIBLE SOFTWARE
+2026750205=What, you&rsquo;re not there yet?
 382223617=\u062C\u0633\u062A\u062C\u0648 \u062F\u0627\u0631 \u0627\u06CC\u0646 \u0645\u062F\u0648\u0644\u0647\u0627\:
--770109390=
--395941515=
+-770109390=What is Word Study?
+-395941515=Yes, we took the verses we don&rsquo;t agree with out.
 69366=\u06A9\u0645\u06A9
 2136248839=\u0628\u0631\u0648 \u0628\u06D5
 911974866=Hide Home Tab
@@ -115,61 +115,61 @@
 -1655125465=The SWORD Project
 -712457038=Hide Library Tab
 -71025529=\u0646\u0648\u0631 \u0631\u0648\u0632\u0627\u0646\u06CC
--1072517163=
+-1072517163=\u0633\u0627\u0639\u0644\u0647\u0627 \u0627\u0648\u0645\u0648\u0645\u06CC
 209527724=Washed Out
--724105878=
--1145659943=
-637633570=
-287322318=
+-724105878=This allows you to print the results of your study directly to your printer, without including the tabs on the top and tools/texts in the margins as part of your printout.
+-1145659943=Over the years a number of Bible scholars have translated the original manuscripts to help the people of a specific time or place to better understand the Word. While the language or diction may differ, the Bibles we offer agree on major points of theology. The best versions are of course those produced by the American Bible Society&hellip; oh ok, the others are excellent too, for the most part.
+637633570=What is passage study?
+287322318=The original Greek or Hebrew word
 1543417950=\u06A9\u062A\u0627\u0628\u0647\u0627 \u062A\u0641\u0633\u06CC\u0631\u06CC 
 -2063750076=[<a href\="parallelstudy.jsp?del\=all&add\=FarTV&add\=TR&add\=FarOPV&add\=WHAC">\u062A\u0639\u0644\u06CC\u0645 \u0639\u062D\u062F \u0686\u062F\u06CC\u062F</a>]
 27422522=\u0627\u0645\u062A\u0644\u0627\u062D
 1156859226=[<a href\="parallelstudy.jsp?del\=all&add\=FarTV&add\=WLC&add\=FarOPV&add\=LXX">\u062A\u0639\u0644\u06CC\u0645 \u0639\u062D\u062F \u0627\u062A\u06CC\u0642</a>]
-1086749734=
+1086749734=Can I modify the Bible Tool to make it better fit on my own site?
 1984518344=OSIS 
 -1632410746=\u06A9\u062A\u0627\u0628\u0647\u0627 \u062A\u0641\u0633\u06CC\u0631\u06CC \u06A9\u0647 \u0627\u0646\u062A\u062E\u0627\u0628 \u0634\u062F\u0647 \u0628\u0648\u062F\u0646\u062F
--1280492446=
+-1280492446=\u062A\u0639\u0644\u06CC\u0645 \u0642\u0633\u0645\u062A \u06A9\u062A\u0627\u0628 \u0645\u0642\u062F\u0633 \u0686\u06CC\u0633\u062A\u061F
 1521066321=Sandy Creek
--1047704401=
+-1047704401=You can download a number of Bibles freely at 
 -2113335756=JUST FOR FUN
 1978212046=Hide Passage Study Tab
-975100616=
+975100616=Why are there so many versions of the Bible &ndash; are some better than others?
 -1276263846=\u062F\u0631 \u0635\u0641\u062D\u0647 "\u0627\u0646\u062A\u062E\u0627\u0628\u0647\u0627" \u06A9\u062A\u0627\u0628\u0647\u0627 \u06CC \u062A\u0641\u0633\u06CC\u0631\u06CC \u0627\u0646\u062A\u062E\u0627\u0628 \u06A9\u0646\u06CC\u062F
 -1118638381=We offer a number of free Bible software downloads for Windows, Mac, Linux, and PDAs, produced by CrossWire Bible Society. 
-1895908607=
+1895908607=Parallel study lets you view texts side by side. You can continue view several texts at the same time, although space becomes an issue at some point depending on the texts being viewed.
 1914634662=Welcome to The Bible Tool-- a free, evolving open source tool for exploring the Bible and related texts online. Created by CrossWire Bible Society, the Society of Biblical Literature and the American Bible Society as the first in a number of coming Bible engagement tools using an XML standard called 
 -1261651212=\u06A9\u0644 \u06A9\u0644\u0645\u0627\u062A \u06CC\u0627 \u0642\u0633\u0645\u062A\u0647\u0627\u06CC \u06A9\u0644\u0645\u0627\u062A
 1463240824=\:\u062A\u0631\u062C\u0645\u0647 \u0647\u0627
 639648097=\u062A\u0631\u062C\u0645\u0647 \u0647\u0627 \u06A9\u0647 \u0627\u0646\u062A\u062E\u0627\u0628 \u06A9\u0631\u062F\u06CC\u062F
 -432996320=\u0628\u0627\u0628 \u0628\u0639\u062F\u06CC
 -269383343=Hide Devotionals Tab
--407365329=
+-407365329=OSIS \u0686\u06CC\u0633\u062A\u061F
 -2132429552=\u0645\u062F\u0648\u0644\u0647\u0627\u06CC \u0645\u062C\u0648\u062F
 1359135079=\u062A\u0639\u0644\u06CC\u0645 \u06A9\u0644\u0627\u0645
 650655508=\u0627\u0633\u0627\u0641\u0647
 -1969911958=\u0627\u0646\u062A\u062E\u0627\u0628 \u0647\u0627 \u062F\u06CC\u06AF\u0627\u0631\u06CC
 -1712078863=\u062E\u06CC\u0644\u06CC \u0627\u0632 \u062A\u0631\u062C\u0645\u0647\u200C\u0647\u0627\u06CC \u06A9\u062A\u0627\u0628 \u0645\u0642\u062F\u0633  \u06CC\u0627\u062F\u062F\u0627\u0634\u062A\u0647\u0627 \u062F\u0631\u0628\u0627\u0631\u0647 \u0632\u0628\u0627\u0646 \u0627\u0635\u0644\u06CC \u062F\u0627\u0631\u0646\u062F
 -765286346=\u0627\u0628\u0632\u0627\u0631\u0647\u0627 \u0628\u0631\u0627\u06CC \u062F\u0631\u0633 
-148412459=
+148412459=APPROPRIATE USE AND PERMISSIONS
 -2076462760=\u0628\u0627 \u0646\u0645\u0627\u06CE\u0634 \u0645\u0648\u0627\u0632\u06CC \u0634\u0645\u0627 \u0645\u06CC\u062A\u0627\u0648\u0646\u06CC\u062F \u062C\u0646\u062F \u062A\u0631\u0686\u0642\u0645\u0647\u200C\u0647\u0627 \u0628\u0627\u0647\u0645 \u062F\u0631 \u06CC\u06A9 \u0635\u0641\u062D\u0647 \u0628\u0628\u06CC\u0646\u06CC\u062F
-1633207700=Bible Gateway,
 -1050723907=\u06A9\u062A\u0627\u0628\u0647\u0627\u06CC \u062A\u0641\u0633\u06CC\u0631\u06CC \u06A9\u0647 \u0627\u0646\u062A\u062E\u0627\u0628 \u06A9\u0631\u062F\u06CC\u062F 
+1633207700=Bible Gateway,
 -1690398936=\u0645\u062F\u0648\u0644\u0647\u0627 \u062F\u0631 \u0646\u0627\u0645\u0627\u06CC\u0634
 -1696462307=\u06A9\u062A\u0627\u0628\u0647\u0627 \u062A\u0641\u0633\u06CC\u0631\u06CC \u06A9\u0647 \u0627\u0646\u062A\u062E\u0627\u0628 \u0634\u062F\u0647 \u0628\u0648\u062F\u0646\u062F
 1281308638=\u06CC\u0627\u062F\u062F\u0627\u0634\u062A \u0647\u0627\u06CC \u062A\u0641\u0633\u06CC\u0631\u06CC\u06CC
 2042381920=
 -661985422=\u062C\u0633\u062A\u062C\u0648\:
--1256493649=
--1511568645=
--222975755=
+-1256493649=Are verses missing?
+-1511568645=\u0628\u0631\u0646\u0627\u0645\u0647 \u062A\u0639\u0644\u06CC\u0645 \u06A9\u062A\u0627\u0628 \u0645\u0642\u062F\u0633 \u06A9\u06CC \u0646\u0648\u0634\u062A\u061F
+-222975755=How do I get printed copies of the Bible in different languages?
 1921124920=\u0627\u06CC\u0646 \u0635\u0641\u062D\u0647 \u0628\u0631\u0627\u06CC \u062C\u0627\u067E \u0634\u062F\u0646 \u0633\u0627\u062E\u062A\u0647 \u0634\u062F
 978829617=\u062D\u0632\u0641
 -283673852=Parchment
 -707528937=and Blue Letter Bible
--2141571999=
-449930511=
-1670666548=
--1197178208=
-768239043=
+-2141571999=if you download the SWORD tool. As we add modern translations to the tool, some restrictions determined by the organizations that hold the license for the content will apply. You can copy some Biblical material from the online Bibles, as long as you follow copyright restrictions.
+1670666548=The texts can be printed in a printer-friendly way, without including all the other information on the page. You can produce a diglot by printing two Bible translations side by side. Additional translations would produce a polyglot. We hope to allow you to edit the formatting of your diglot or polyglot scripture portion in the future (hopefully early Spring).
+449930511=USING THE BIBLE TOOL
+-1197178208=\u0633\u0627\u0639\u0644\u0647\u0627
+768239043=Strong's Numbers are numbers given to words in the Bible by Dr. James Strong for his Exhaustive Concordance, first published in 1890. With the advent of handheld computers, using Strong&rsquo;s numbers has never been easier. By looking up the corresponding number, you can obtain the following information about words in the Bible\:
 -1710858813=
 2598814=Tabs
