Commented out some examples in swordweb.properties added chapter intro processing to passagestudy

--- a/webapp/WEB-INF/classes/trans_en_US.properties
+++ b/webapp/WEB-INF/classes/trans_en_US.properties
@@ -1,9 +1,10 @@
-#Tue Nov 11 08:27:54 MST 2008
+#Sat Jan 16 22:23:11 MST 2010
 1397839042=What is power search?
 1121727836=Biblical Texts
 105=i
 104=h
 80048383=OTHER BIBLE TOOLS
+-304067748=This is a printer friendly version
 101=e
 -26833613=Unbound Bible,
 84883943=UPLOAD TEXTS
@@ -27,11 +28,13 @@
 -1279940531=Using Strong's Numbers, you can easily find other appearances of a word, or the location of a phrase if you know parts of the phrase but not its exact location in the Bible.
 961731111=Commentaries
 1947754291=we provide power searching capabilities and cutting edge tools to help you engage the Bible at a deeper level. 
+-1995028881=Glasgow Iranian Church
 1063422380=A number of things. You can select preferred Bible translations and other texts, so that your search or study only references your preferred selections. You can also add / remove tabs at the top, depending on texts or functionality that you like or perhaps don&rsquo;t use. You can also choose the tool&rsquo;s skin. Our goal is to give you as many preferences as possible, and we&rsquo;ll be adding more in the coming months.
 3259=Persian/Farsi
 137584316=Be sure to check out these other sites for free Bible resources\:  
 1236046375=Parallel
 -1955964497=What can I do with Preferences?
+76705939=K\u00F6rp\u00FC
 -433513342=What is Power Search?
 -488807382=
 -872325569=Morphology is the information about the language parsing of a word, such as the tense, voice or mood. You can click on the morph codes following the words to view the parsing of that word
@@ -101,6 +104,7 @@
 -1121905749=The Bible Tool is part of a larger initiative co-sponsored by ABS and the SBL to allow people to approach the Bible on their terms, in the culture, community, context, media and format of their choice. This tool will evolve in the coming months / years to help us reach that goal.
 1371173378=What is &ldquo;Show Morphology&rdquo;?
 968804337=Advanced- Regular Expression
+2245473=Help
 -1110669805=Daily Devotionals
 1523222879=The definition of the original word
 -1995153715=How can I get a printed edition of the Bible?
@@ -156,17 +160,17 @@
 -1118638381=We offer a number of free Bible software downloads for Windows, Mac, Linux, and PDAs, produced by CrossWire Bible Society. 
 1895908607=Parallel study lets you view texts side by side. You can continue view several texts at the same time, although space becomes an issue at some point depending on the texts being viewed.
 1914634662=Welcome to The Bible Tool-- a free, evolving open source tool for exploring the Bible and related texts online. Created by CrossWire Bible Society, the Society of Biblical Literature and the American Bible Society as the first in a number of coming Bible engagement tools using an XML standard called 
-1463240824=
 -1261651212=All Words or Word Fragments
+1463240824=
 639648097=
 93309679=az_IR
 -432996320=
 -251106573=Commentaries\:
 -269383343=Hide Devotionals Tab
-124=|
 -407365329=What is this OSIS you speak of?
-0=
+124=|
 -2132429552=
+0=
 1359135079=
 650655508=
 -1969911958=Misc Options
@@ -174,32 +178,33 @@
 -765286346=
 148412459=APPROPRIATE USE AND PERMISSIONS
 -2076462760=
-1633207700=Bible Gateway,
 -1050723907=
+1633207700=Bible Gateway,
 -1690398936=
 -1696462307=Preferred Comentaries
 1281308638=
+63058797=About
 -661985422=Search\:
-119=w
 -1256493649=Are verses missing?
+119=w
 116=t
 115=s
-114=r
 -1511568645=Who is behind the Bible Tool? Why are you wearing that wig?
--222975755=How do I get printed copies of the Bible in different languages?
+114=r
 1375204016=) of search results
+-222975755=How do I get printed copies of the Bible in different languages?
 112=p
-111=o
 1921124920=This page is printer friendly
+111=o
 978829617=
 -283673852=Parchment
 -707528937=and Blue Letter Bible
 -2141571999=if you download the SWORD tool. As we add modern translations to the tool, some restrictions determined by the organizations that hold the license for the content will apply. You can copy some Biblical material from the online Bibles, as long as you follow copyright restrictions.
-449930511=USING THE BIBLE TOOL
 1670666548=The texts can be printed in a printer-friendly way, without including all the other information on the page. You can produce a diglot by printing two Bible translations side by side. Additional translations would produce a polyglot. We hope to allow you to edit the formatting of your diglot or polyglot scripture portion in the future (hopefully early Spring).
+449930511=USING THE BIBLE TOOL
 -1197178208=Frequently Asked Questions
-768239043=Strong's Numbers are numbers given to words in the Bible by Dr. James Strong for his Exhaustive Concordance, first published in 1890. With the advent of handheld computers, using Strong&rsquo;s numbers has never been easier. By looking up the corresponding number, you can obtain the following information about words in the Bible\:
 -74543520=Sandy Desert
--1710858813=Hide All
+768239043=Strong's Numbers are numbers given to words in the Bible by Dr. James Strong for his Exhaustive Concordance, first published in 1890. With the advent of handheld computers, using Strong&rsquo;s numbers has never been easier. By looking up the corresponding number, you can obtain the following information about words in the Bible\:
 1995771987=Original Language\:
+-1710858813=Hide All
 2598814=Tabs
