Added eusebian numbers to parallel view cleaned up html of parallel view to help it validate

--- a/webapp/WEB-INF/classes/trans_en_US.properties
+++ b/webapp/WEB-INF/classes/trans_en_US.properties
@@ -1,4 +1,4 @@
-#Fri Feb 01 09:24:52 MST 2013
+#Wed Feb 06 15:52:03 MST 2013
 1359135079=
 1063422380=A number of things. You can select preferred Bible translations and other texts, so that your search or study only references your preferred selections. You can also add / remove tabs at the top, depending on texts or functionality that you like or perhaps don&rsquo;t use. You can also choose the tool&rsquo;s skin. Our goal is to give you as many preferences as possible, and we&rsquo;ll be adding more in the coming months.
 -1955964497=What can I do with Preferences?
@@ -75,6 +75,7 @@
 2557855=RtoL
 1236046375=Parallel
 -984663690=the use of technology to dig deeper into the text;
+-611143796=Presets\: [<a href\="parallelstudy.jsp?del\=all&amp;add\=KJV&amp;add\=WLC&amp;add\=NASB&amp;add\=LXX">OT Scholar</a>]
 2085139382=Essays
 -2116099482=
 666463485=Translate this text
@@ -239,6 +240,7 @@
 382223617=Module to search\:
 -1818419758=Simple
 -1946624683=Interactive Maps
+1628202757=[<a href\="parallelstudy.jsp?del\=all&amp;add\=KJV&amp;add\=TR&amp;add\=Treg&amp;add\=NASB">NT Scholar</a>]
 -2132429552=
 -1215128067=GnomeSword
 1463240824=
@@ -286,14 +288,14 @@
 -892589591=Crosswalk
 1397500449=Unicode 4.0 (including Plane 1) support
 1696656910=Show Headings in Bibles
-148412459=APPROPRIATE USE AND PERMISSIONS
 1009662050=But in the study of artificial languages, translating standard works of literature like the Bible is often done, and for two reasons.  First, it is a way to exercise and develop the language, and second, it helps to develop a body of literature in that language.  This literature can then be used and referred to by people learning and using the language.
+148412459=APPROPRIATE USE AND PERMISSIONS
 0=
 1221567659=To view all the software available from CrossWire, go to the 
 -253594524=by keyword or phrase\:
 1521066321=Sandy Creek
-313721366=Click to remove.  Reselect on the side to move to the top.
 -944944335=The grass withers, the flower fades; but the word of our God stands forever. Isaiah 40\:8
+313721366=Click to remove.  Reselect on the side to move to the top.
 951899941=Show Daily Devotionals Tab
 -1860636657=Of course we&rsquo;re kidding. No, verses are not missing. However, some verses appear as footnotes in certain translations, because they weren&rsquo;t present in the earliest or most reliable manuscripts. To view these verses, you need to view the entire chapter or any span of verses that includes the verse directly preceding the apparent "missing" verse.
 -1439463711=The software is a combined project of the 
