added Russian translation and updates to others

--- a/webapp/WEB-INF/classes/trans_en_US.properties
+++ b/webapp/WEB-INF/classes/trans_en_US.properties
@@ -1,5 +1,6 @@
-#Wed Feb 06 15:52:03 MST 2013
+#Fri Jun 17 02:42:24 MST 2016
 1359135079=
+-1578688434=Bible software developed for the Windows operating environment.
 1063422380=A number of things. You can select preferred Bible translations and other texts, so that your search or study only references your preferred selections. You can also add / remove tabs at the top, depending on texts or functionality that you like or perhaps don&rsquo;t use. You can also choose the tool&rsquo;s skin. Our goal is to give you as many preferences as possible, and we&rsquo;ll be adding more in the coming months.
 -1955964497=What can I do with Preferences?
 55083623=First page (
@@ -9,9 +10,11 @@
 1417027184=BibleTime is a Bible study application for Linux. It is based on the K Desktop Environment.
 -195667765=DOWNLOADS
 1645341956=BIBLE VERSIONS AND TRANSLATIONS
+-115964712=Xiphos is a Bible Study application based on Gtk and available for Windows and Linux.
 209527724=Washed Out
 -1660970327=The technology was developed by 
 1689727392=Passage study allows you to search by keyword (for example, Pharaoh), phrase (such as Ark of the Covenant), verse (like Genesis 1\:1) or passage (John 3).
+-1190583956=Unicode support
 285275739=Bible reference\:
 -282017831=Show Help Tab
 772113425=leveraging our existing distribution channels\: making the tool available soon to the 20,000 churches who have Web sites using <acronym title\="American Bible Society">ABS</acronym>'s ForMinistry.com, and the thousands of <acronym title\="Society of Biblical Literature">SBL</acronym> members who engage the Bible from numerous academic perspectives
@@ -22,8 +25,8 @@
 1132835690=Society of Biblical Literature
 106983531=Brazillian Portuguese
 -441839507=Speed optimizations
--1511568645=Who is behind the Bible Tool? Why are you wearing that wig?
 -1506232183=OSIS website
+-1511568645=Who is behind the Bible Tool? Why are you wearing that wig?
 -269383343=Hide Devotionals Tab
 -1642511764=View search results in
 -1276263846=
@@ -39,13 +42,14 @@
 1147145891=BIBLICAL QUESTIONS
 1991517885=United Bible Societies
 -2124482255=Translate text 2
-3710=tr
+3710=Turkish
 96917886=Are you the sort of person who creates a Klingon translation of the Bible? Would it cross your mind to build a Hyper-Concordance for the New Testament in your spare time? People are using an XML standard called <acronym title\="Open Scripture Information Standard">OSIS</acronym> to do a number of interesting things.
 -717182931=However, it&rsquo;s easier to just download the software from the website.
 1543417950=
 -451549348=Glossaries
 -705894424=This means we will strive to enable you, the user, to have the look / feel you want, the functionality you want, the texts you want (by adding popular ones and allowing you to upload your own) in the format you want (initially electronic or print). Because the tool is open source, if you have some technical skills you are free to download the tool and make changes as you see fit.
 -2063750076=
+346758335=Eloquent
 69366=FAQ
 1605449120=in the text of 
 -433513342=What is Power Search?
@@ -66,6 +70,7 @@
 96860=arm
 -631576071=Once anyone hears of a project to make a Klingon Bible, the question that comes up is "why?"  Certainly there is no need for such a version, as there is a need for a Bible in English, Spanish, German, or any other "real" language.  There is no person who would only be able to access the scriptures in Klingon.
 -1294426661=Show Power Search Tab
+3651=Russian
 351120534=References to other appearances of the word in the Bible
 3259=Persian/Farsi
 -1247791591=Unbound Bible
@@ -96,12 +101,12 @@
 2136248839=Go to\:
 3239=Greek
 538518468=The Open Scriptural Information Standard (OSIS) is an XML schema for encoding Bibles and related text. Once in OSIS, you can do lots of cool things, like publish the info as a printed book, or PDF, or HTML, or WML for viewing on a cell phone, etc. You can learn more by visiting the 
-2255103=Home
 -1660377174=Hide Daily Devotionals Tab
+2255103=Home
 395882480=Welcome to The Bible Tool-- a free, evolving open source tool for exploring the Bible and related texts online. Created by CrossWire Bible Society, the Society of Biblical Literature and the American Bible Society as the first in a number of coming Bible engagement tools using an XML standard called <acronym title\="Open Scripture Information Standard">OSIS</acronym> , we provide power searching capabilities to help you engage the Bible at a deeper level.
 775598623=Show Parallel Tab
 -395941515=Yes, we took the verses we don&rsquo;t agree with out.
-3191=cz
+3191=Czech
 -1064235707=We offer a number of free Bible software downloads for Windows, Mac, Linux and Palm produced by CrossWire Bible Society. 
 63058797=About
 1258901926=
@@ -110,6 +115,7 @@
 -872325569=Morphology is the information about the language parsing of a word, such as the tense, voice or mood. You can click on the morph codes following the words to view the parsing of that word
 -222975755=How do I get printed copies of the Bible in different languages?
 -1762719186=What does &ldquo;printer friendly&rdquo; mean?
+1225680338=Footnotes and crossreferences
 -1204791352=Search Type\:
 -2120284785=What can I do with preferences?
 -1995028881=Glasgow Iranian Church
@@ -145,10 +151,12 @@
 139206051=Bible software developed for the Windows operating environment. Features include\:
 968804337=Advanced- Regular Expression
 -1278213999=OSIS is a key technical piece that will allow this to happen. Other key pieces include partnerships between organizations like SBL and ABS (to insure large distribution channels), and good content, such as making modern translations and helpful related materials available. That will be a big focus in the coming months.
+2072765255=Testament, book and chapter introductions
 1113579794=Preferred Style
 106426225=page 
 380329950=Hide Strongs
 -1696462307=Preferred Comentaries
+387283366=Download a number of free Bible software downloads for Windows, Mac, Linux, Android, iOS and others produced by CrossWire Bible Society.
 230718181=The SWORD Project,
 -1205385002=Search Term\:
 124=|
@@ -156,6 +164,7 @@
 -604339487=Generic Books
 -1900473501=Crosswalk,
 -1072517163=GENERAL QUESTIONS
+-336016144=Support for non-KJV canon and versifications
 119=w
 -724105878=This allows you to print the results of your study directly to your printer, without including the tabs on the top and tools/texts in the margins as part of your printout.
 1663949596=The Klingon Language Version is an experimental relexification of the WEB. It is not properly a translation, but a demonstration of what a tlhIngan Hol (Klingon Language) Bible would look like.
@@ -188,6 +197,7 @@
 -1029354207=OSIS import and export tools
 1978212046=Hide Passage Study Tab
 -140438002=MacSWORD
+-1675192211=Xiphos
 97=a
 849261155=Hide Notes
 -996062774=Show Gospel Harmony Tab
@@ -229,12 +239,14 @@
 -1702845883=The Klingon Bible
 -1621785194=External Links\:
 1281308638=
+295480946=Speed optimizations for search
 698789961=SWORD for Windows
 1984518344=OSIS Web\: 
 -251106573=Commentaries\:
 825576054=Don't Use Javascript
 1914634662=Welcome to The Bible Tool-- a free, evolving open source tool for exploring the Bible and related texts online. Created by CrossWire Bible Society, the Society of Biblical Literature and the American Bible Society as the first in a number of coming Bible engagement tools using an XML standard called 
 -1995153715=How can I get a printed edition of the Bible?
+1035337695=BibleTime is a Bible study application for Windows and Linux. It is based on the Qt toolset.
 -1771240401=To learn more about the OSIS initiative, visit the Bible Technologies Group.
 934874484=Preferred Commentaries\:
 382223617=Module to search\:
@@ -249,8 +261,9 @@
 -1632410746=Preferred Commentaries
 768239043=Strong's Numbers are numbers given to words in the Bible by Dr. James Strong for his Exhaustive Concordance, first published in 1890. With the advent of handheld computers, using Strong&rsquo;s numbers has never been easier. By looking up the corresponding number, you can obtain the following information about words in the Bible\:
 -1142430264=Result Page\:
--71025529=Daily Devotionals\:
 2435598=OSIS
+-71025529=Daily Devotionals\:
+-316618734=Many language locales
 80048383=OTHER BIBLE TOOLS
 46=.
 978829617=
@@ -288,8 +301,8 @@
 -892589591=Crosswalk
 1397500449=Unicode 4.0 (including Plane 1) support
 1696656910=Show Headings in Bibles
-1009662050=But in the study of artificial languages, translating standard works of literature like the Bible is often done, and for two reasons.  First, it is a way to exercise and develop the language, and second, it helps to develop a body of literature in that language.  This literature can then be used and referred to by people learning and using the language.
 148412459=APPROPRIATE USE AND PERMISSIONS
+1009662050=But in the study of artificial languages, translating standard works of literature like the Bible is often done, and for two reasons.  First, it is a way to exercise and develop the language, and second, it helps to develop a body of literature in that language.  This literature can then be used and referred to by people learning and using the language.
 0=
 1221567659=To view all the software available from CrossWire, go to the 
 -253594524=by keyword or phrase\:
